Update hero section height and text labels

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         .nav-github { background: var(--accent); padding: 0.5rem 1.2rem !important; border-radius: 20px; color: white !important; font-weight: 700 !important; box-shadow: 0 0 20px rgba(0, 122, 255, 0.3); opacity: 1 !important; }
 
         /* Hero */
-        .hero { min-height: 80vh !important; }
+        .hero { min-height: 120vh !important; }
         .hero h1 { font-size: clamp(2.5rem, 8vw, 4.5rem); font-weight: 700; letter-spacing: -3px; }
         .highlight { color: var(--accent); }
         .typewriter { font-size: 1.5rem; opacity: 0.6; height: 2rem; font-weight: 300; margin-top: 10px; }
@@ -253,21 +253,21 @@
     </section>
 
     <section id="about">
-        <h2 data-aos="flip-up" style="font-size: 2.5rem;">Connect</h2>
+        <h2 data-aos="flip-up" style="font-size: 2.5rem;">Contact</h2>
         <div class="social-grid" data-aos="fade-up">
             <a href="https://www.linkedin.com/in/%C3%B6meraydo%C4%9Fan?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=androi" target="_blank" class="social-card">
-                <i class="fab fa-linkedin-in"></i><span>LINKEDIN</span>
+                <i class="fab fa-linkedin-in"></i><span>LİNKEDiN</span>
             </a>
             <a href="https://github.com/omeraydognn" target="_blank" class="social-card">
-                <i class="fab fa-github"></i><span>GITHUB</span>
+                <i class="fab fa-github"></i><span>GİTHUB</span>
             </a>
             <a href="https://www.instagram.com/omer.aydognn?igsh=dTVwcnc3am5iN3N4" target="_blank" class="social-card">
-                <i class="fab fa-instagram"></i><span>INSTAGRAM</span>
+                <i class="fab fa-instagram"></i><span>İNSTAGRAM</span>
             </a>
         </div>
     </section>
 
-    <footer>© 2025 relax. All rights reserved. <br> Built for the Decentralized Web.</footer>
+    <footer>© 2025 relax. All rights reserved. </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
