Change job title from 'CTO' to 'Management'

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             </div>
             <div class="exp-card" data-aos="fade-up" data-aos-delay="200">
                 <div class="exp-badge">Current</div>
-                <h3>CTO</h3>
+                <h3>Management</h3>
                 <h4><a href="#" class="company-link">ArfDAO</a></h4>
                 <p>2024 - Present</p>
                 <p style="opacity: 0.4;">Driving decentralized governance and development.</p>
